--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             }
         </style>
     </head>
-    <body class="bg-gray-100 text-gray-800 flex items-center justify-center min-h-screen">
+    <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 flex items-center justify-center min-h-screen">
         <div class="flex gap-2 h-full max-w-4xl w-full aspect-video">
             <div id="c1" class="flex bg-blue-500 c1" style="width: 50%; border-radius: 4rem;"></div>
             <div id="c2" class="flex bg-blue-600 c2" style="width: 30%; border-radius: 4rem;"></div>
